--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 									<h3>Self-Made</h3>
 									<p>I had created my Personal Portfolio website using html,css &
 										Javascript and Scrutinize it (Link Mentioned Below) .</p>
-									<p>GITHUB: <span><a href="https://github.com/reshmamohammad6">github.com/reshmamohammad6</a></span></p>
+									<p>GITHUB: <span><a href="https://reshmamohammad6.github.io/first-portfoloi/">https://reshmamohammad6.github.io/first-portfoloi/</a></span></p>
 										
 								</div>
 							</li>
